--- a/ColabScan.ipynb
+++ b/ColabScan.ipynb
@@ -1,10 +1,20 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kGZufCENpsmS"
-      },
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/UriNeri/ColabScan/blob/main/ColabScan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "kGZufCENpsmS"
+   },
       "source": [
         "# ColabScan !\n",
         "Making it easier for non-bioinfos to search their data for RdRps.  \n",
