Fix paths to DBs

--- a/ColabScan.ipynb
+++ b/ColabScan.ipynb
@@ -1581,7 +1581,11 @@
     "%%shell\n",
     "cd /content/\n",
     "\n",
-    "HMM_DBs=($(pwd)/DBs/Colab_RdRp_hmmer_3.2.2.hmm $(pwd)/DBs/NeoRdRp-HMM.v1.1.hmm)\n",
+    "tar -xvjf ColabScan/DBs/Colab_RdRp_hmmer_3.2.2.hmm.bz2",
+    "\n",
+    "tar -xvjf ColabScan/DBs/NeoRdRp-HMM.v1.1.hmm.bz2",
+    "\n",
+    "HMM_DBs=($(pwd)/ColabScan/DBs/Colab_RdRp_hmmer_3.2.2.hmm $(pwd)/ColabScan/DBs/NeoRdRp-HMM.v1.1.hmm)\n",
     "\n",
     "intput_file=./*.fasta\n",
     "ini_name=$(basename $intput_file \".fasta\")\n",
