Switch hmmer download from latest to fixed version (3.3.2)
Patch, not tested. Ideally, instead of a fixed version download need to move the cd + tar to the download version (which ever it is) instead, but can't test if all future version would be backwards compatible with the version that created the DBs and the hmmsearch commands later in this notebook

--- a/ColabScan.ipynb
+++ b/ColabScan.ipynb
@@ -1206,8 +1206,8 @@
     "wget https://github.com/shenwei356/seqkit/releases/download/v2.4.0/seqkit_linux_amd64.tar.gz --quiet\n",
     "tar -zxvf  seqkit_linux_amd64.tar.gz\n",
     "\n",
-    "wget http://eddylab.org/software/hmmer/hmmer.tar.gz --quiet\n",
-    "tar -zxvf hmmer.tar.gz\n",
+    "wget http://eddylab.org/software/hmmer/hmmer-3.3.2.tar.gz --quiet\n",
+    "tar -zxvf hmmer-3.3.2.tar.gz\n",
     "cd hmmer-3.3.2\n",
     "./configure\n",
     "make\n",
